# tks-essentials

./: .flake8  .gitignore  AGENTS.md  README.md  SKILL.md  TESTING.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: testing_and_deployment.yml
agents/: data-models.md  integration-io.md  quality.md
docs/: codex.md  trade_monitoring_model_recommendation.md
tests/: __init__.py  conftest.py  docker-compose.yaml  test_asset_formatter.py  test_data_models.py  test_database.py  test_database_unit_coverage.py  test_global_logger.py  test_global_logger_unit_coverage.py  test_integration_stack_precheck.py  test_kafka_topic_lifecycle.py  test_market_data_models.py  test_models.py  test_security_unit_coverage.py  test_utils.py  test_validators.py
tests/int/: conftest.py  test_database_integration.py  test_kafka_topic_lifecycle.py  test_topic_creation_integration.py
tksessentials/: database.py  global_logger.py  models.py  utils.py
tksessentials/data_models/: README.md  __init__.py  events.py  payloads.py  snapshots.py  value_objects.py
tksessentials/data_models/market_data/: __init__.py  payloads.py  value_objects.py
