# pyproject.toml

[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "tks-essentials"
version = "0.1.42"
description = "Essentials for our TKS projects."
readme = "README.md"
authors = [{ name = "Brayan", email = "brayan@sparkandhale.com" }]
requires-python = ">=3.12.9"
license = "MIT"

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12"
]

keywords = ["finance", "trading", "models"]

dependencies = [
    "aiokafka>=0.13.0",
    "cryptography>=46.0.5",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "pydantic>=2.12.5",
    'tomli; python_version < "3.12"',
]

[project.optional-dependencies]
dev = [
    "black",
    "bumpver",
    "isort",
    "pip-tools",
    "pytest",
    "pytest-asyncio",
    "pytest-cov"
]

[project.urls]
Homepage = "https://github.com/The-Kara-System/tks-essentials"

[tool.setuptools]
packages = ["tksessentials", "tksessentials.data_models"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=tksessentials --cov-report=term-missing --cov-report=html"
markers = [
    "integration: tests that require Kafka and/or ksqlDB services",
]


[tool.bumpver]
current_version = "0.1.42"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
